--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "72609691",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "import librosa.display\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "PICKLE_DIR = '/pickle'\n",
+    "PICKLE_DIR = 'D:\\9999_OneDrive_ZHAW\\OneDrive - ZHAW\\BA_ZHAW_RTO\\pickle'\n",
     "root = 'Z:\\\\BA\\\\mimii_baseline\\\\dataset'"
    ]
   },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "36bcccfe",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
     "\n",
     "    return : None\n",
     "    \"\"\"\n",
-    "    filepath = os.path.join(root, filename, '.pickle')\n",
+    "    filepath = os.path.join(root, filename) + '.pickle'\n",
     "    with open(filepath, 'wb') as sf:\n",
     "        pickle.dump(save_data, sf)\n",
     "\n",
@@ -150,7 +150,7 @@
     "\n",
     "    return : data\n",
     "    \"\"\"\n",
-    "    filepath = os.path.join(root, filename, '.pickle')\n",
+    "    filepath = os.path.join(root, filename) + '.pickle'\n",
     "    with open(filepath, 'rb') as lf:\n",
     "        load_data = pickle.load(lf)\n",
     "    return load_data"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e2edaacb",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dataloader:  17%|███████████▍                                                       | 643/3749 [01:43<02:13, 23.25it/s]"
+      "Dataloader: 100%|██████████████████████████████████████████████████████████████████| 3749/3749 [04:07<00:00, 15.14it/s]\n",
+      "Dataloader: 100%|████████████████████████████████████████████████████████████████████| 456/456 [00:31<00:00, 14.67it/s]\n"
      ]
     }
    ],
@@ -273,10 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "06d13c0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-20.155865  -20.236065  -16.026154  ... -31.498413  -33.182472\n",
+      "  -33.891582 ]\n",
+      " [-12.563705  -14.5558815 -10.9439125 ... -28.492458  -29.713936\n",
+      "  -27.130947 ]\n",
+      " [-14.09877   -16.142235  -10.725767  ... -30.762085  -32.16601\n",
+      "  -31.544228 ]\n",
+      " ...\n",
+      " [-10.915076   -9.411437  -13.841331  ... -45.56337   -46.086052\n",
+      "  -49.170116 ]\n",
+      " [ -8.277532  -12.288207  -12.049769  ... -44.709644  -47.02185\n",
+      "  -46.44263  ]\n",
+      " [ -7.603442  -11.675008  -12.90816   ... -47.67592   -48.4262\n",
+      "  -47.76262  ]]\n",
+      "320\n"
+     ]
+    }
+   ],
    "source": [
     "print(six_norm_data)\n",
     "print(len(six_norm_data[0]))"
@@ -284,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0834bb13",
    "metadata": {
     "scrolled": false
